# python-template

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  pyproject.toml
